--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  role_name: kubernetes
+  role_name: kubernetes-golden-img-reconfigure
   author: dalvez@inf.upv.es
   description: Kubernetes reconfigure for ad-hoc golden image
   company:
